# Python_100_Exercises

./: .gitignore  README.md  pyproject.toml
exercises/001/: README.md  m1.py
exercises/002/: README.md  m1.py
exercises/003/: README.md  m1.py  m2.py
exercises/004/: README.md  m1.py
exercises/005/: README.md  m1.py  m2.py
exercises/006/: README.md
exercises/007/: README.md  m1.py  m2.py  m3.py  m4.py  m5.py
exercises/008/: m1.py  m2.py  m3.py
exercises/009/: README.md
exercises/010/: m3.py
exercises/011/: m2.py  m3.py
exercises_001_to_010/005/: m3.py
exercises_001_to_010/006/: m1.py  m2.py  m3.py
exercises_001_to_010/007/: README.md  m2.py  m4.py
exercises_001_to_010/008/: README.md  m4.py
exercises_001_to_010/009/: m1.py  m2.py  m3.py
exercises_001_to_010/010/: README.md  m1.py  m2.py
exercises_011_to_020/011/: README.md  m1.py
exercises_011_to_020/012/: m1.py  m2.py  m3.py
exercises_011_to_020/013/: README.md  m1.py  m2.py  m3.py
exercises_011_to_020/014/: README.md  m1.py  m2.py  m3.py
exercises_011_to_020/015/: README.md  m1.py  m2.py  m3.py
exercises_011_to_020/016/: README.md  m1.py  m2.py  m3.py
exercises_011_to_020/017/: README.md  m1.py  m2.py  m3.py  示例.csv
exercises_011_to_020/018/: README.md  m1.py  m2.py  m3.py  m4.py
exercises_011_to_020/019/: m1.py  m2.py  m3.py  m4.py
exercises_011_to_020/020/: README.md  m1.py  m2.py  m3.py
exercises_021_to_030/021/: README.md  m1.py
exercises_021_to_030/022/: m1.py  m2.py
exercises_021_to_030/023/: README.md  m1.py  m2.py
exercises_021_to_030/024/: m1.py  m2.py  (+1 more)
(+51 files in other folders)
