[tool.poetry]
name = "python_100_exercises"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
fpdf = "^1.7.2"
requests = "^2.26.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
